test/classes/jplevyak/record_type_hierarchy-3-error.good
_chpl_adomain.chpl:148: fwrite, f : file, x : _aarray
_chpl_adomain.chpl:44: fwrite, f : file, val : _adomain_lit
_chpl_adomain.chpl:6: fwrite, f : file, val : _adomain_info
_chpl_adomain.chpl:72: fwrite, f : file, x : _adomain
_chpl_adomain.chpl:77: fwrite, f : file, val : _aarray_info
_chpl_complex.chpl:17: fwrite, f : file, x : complex
_chpl_data.chpl:53: fwrite, f : file, val : _fdata
_chpl_file.chpl:120: fwrite, f : file, val : int64
_chpl_file.chpl:145: fwrite, f : file, val : float64
_chpl_file.chpl:168: fwrite, f : file, val : string
_chpl_file.chpl:204: fwrite, f : file, val : bool
_chpl_file.chpl:217: fwrite, f : file, x : nil_type
_chpl_file.chpl:51: fwrite, f : file, val : file
_chpl_htuple.chpl:27: fwrite, f : file, val : _htuple
_chpl_htuple.chpl:27: fwrite, f : file, val : _htuple
_chpl_seq.chpl:168: fwrite, f : file, s : seq
_chpl_seq.chpl:168: fwrite, f : file, s : seq
_chpl_seq.chpl:228: fwrite, f : file, s : _aseq
_chpl_seq.chpl:6: fwrite, f : file, val : _seqNode
_chpl_seq.chpl:6: fwrite, f : file, val : _seqNode
error: '_tmp' has no type
fail: program does not type
fwrite, f : file, val : _tuple2
fwrite, f : file, val : _tuple2
note: candidates are:
note: candidates are:
prelude.chpl:134: fwrite, f : file, val : reduction
prelude.chpl:137: fwrite, f : file, val : sum
prelude.chpl:140: fwrite, f : file, val : max
prelude.chpl:143: fwrite, f : file, val : min
prelude.chpl:146: fwrite, f : file, val : maxloc
prelude.chpl:149: fwrite, f : file, val : minloc
prelude.chpl:158: fwrite, f : file, val : timer
prelude.chpl:208: fwrite, f : file, val : _methodTokenType
prelude.chpl:214: fwrite, f : file, val : _setterTokenType
prelude.chpl:219: fwrite, f : file, val : _seq
prelude.chpl:241: fwrite, f : file, val : Array
prelude.chpl:244: fwrite, f : file, val : Domain
prelude.chpl:247: fwrite, f : file, val : Tuple
prelude.chpl:24: fwrite, f : file, val : _ddata
prelude.chpl:24: fwrite, f : file, val : _ddata
prelude.chpl:24: fwrite, f : file, val : _ddata
prelude.chpl:24: fwrite, f : file, val : _ddata
prelude.chpl:24: fwrite, f : file, val : _ddata
prelude.chpl:30: fwrite, f : file, val : CFILEPTR
prelude.chpl:3: fwrite, f : file, val : object
prelude.chpl:4: fwrite, f : file, val : value
record_type_hierarchy-3-error.chpl:12: f, a : D
record_type_hierarchy-3-error.chpl:16: expression has no type
record_type_hierarchy-3-error.chpl:16: expression has no type
record_type_hierarchy-3-error.chpl:16: illegal call argument type '_tmp' illegal: ( ) 
record_type_hierarchy-3-error.chpl:16: illegal call argument type 'b' illegal: ( C ) 
record_type_hierarchy-3-error.chpl:16: illegal call argument type 'stdout' illegal: ( file ) 
record_type_hierarchy-3-error.chpl:16: unresolved call 'f'
record_type_hierarchy-3-error.chpl:16: unresolved call 'fwrite'
record_type_hierarchy-3-error.chpl:3: fwrite, f : file, val : C
record_type_hierarchy-3-error.chpl:8: fwrite, f : file, val : D
